@startuml
left to right direction
skinparam monochrome true
skinparam handwritten false
hide class circle
skinparam shadowing false
skinparam classAttributeIconSize 0

class Plan1{
+complainmentRequest(): none
}

class Plan2{
+Maintence(): date
}

class Plan3{

}

class Plan{
+pay(): none
+addMoney(): none
}
class client_car{
-licensePlate:string
-numVIN: string
-Money: String
-color: string
-brand: string
-origin: string
}
class clientedata{
-cedula: string
-name: string
-lastname: string
-plan: string
-telephone: string
-paydate: string
#cardnumber: string
#expdate: string
#cod: int
-mail: string
-password: string
+carMod(): none
+modPassword(): none
+modNum(): none
}
class admin{
-name: string
-lastname: string
-mail: string
-password: string
+addclient(): none
+removeclient(): none
+modClient(): none
+modNum(): none
}

Plan  ---> Plan1: >
Plan  ---> Plan2: >
client_car "1"---* Plan: >
clientedata "1"---> client_car: >
Plan1 ---> Plan2:>
Plan ---> Plan3:>

@enduml